Hero and part of About sections

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,14 +1,14 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #F7F4F3;
+$secondary-color: #6B7F82;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
 
 $white-color: #fff;
-
+$black-color: #191E27;
 $dark-grey: #333333;
-
+$off-pink: #D3B5D2;
 $dark-blue-text: #272341; // For Headings
 
 // FONT SIZE
