--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -1,15 +1,15 @@
 #about {
-  background-color: $primary-color;
-  background-image: linear-gradient(
-    135deg,
-    $primary-color 0%,
-    $secondary-color 100%
-  );
+  background-color: $black-color;
+  // background-image: linear-gradient(
+  //   135deg,
+  //   $primary-color 0%,
+  //   $secondary-color 100%
+  // );
   color: $white-color;
   height: 100%;
   border-top: 0px;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  // -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  // clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   padding-bottom: 10%;
 
   @include respond(tab-land) {
@@ -74,6 +74,45 @@
             background: transparent;
             font-style: normal;
           }
+        }
+      }
+    }
+    .about-text {
+      position: relative;
+
+      #gavin {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        text-align: right;
+        h1 {margin: 0;}
+
+        #g-block {
+          position: absolute;
+          right: 0;
+          bottom: 0;
+          z-index: 2;
+          width: 200px;
+          height: 4px;
+          background-color: $off-pink;
+        }
+        
+      }
+      #erick {
+        position: absolute;
+        left: 0;
+        top: 0;
+        text-align: left;
+        h1 {margin: 0;}
+
+        #e-block {
+          position: absolute;
+          left: 0;
+          top: 0;
+          z-index: 2;
+          width: 200px;
+          height: 4px;
+          background-color: $off-pink;
         }
       }
     }
