--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -4,10 +4,11 @@
   display: flex;
   align-items: center;
   border-bottom: 0px;
-  background: $white-color;
+  background: $black-color;
   font-weight: 400;
-  color: $dark-blue-text;
-  padding: 0rem 5.6rem;
+  color: $primary-color;
+  padding: 0;
+  //padding: 0rem 5.6rem;
   margin-bottom: 0;
   top: 0;
   left: 0;
@@ -21,15 +22,27 @@
   background-position: center;
   background-size: cover; */
 
+  #hero-container {
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    padding: 0 0 0 12rem;
+  }
+
   @include respond(phone) {
     padding: 0rem $default-font-size;
   }
 
   .hero-title {
-    font-size: 5.6rem;
+    font-size: 4rem;
     font-weight: 700;
-    margin-bottom: 3.2rem;
+    margin-bottom: 1rem;
     text-align: left;
+    max-width: 600px;
 
     @include respond(tab-land) {
       font-size: 4rem;
@@ -49,7 +62,8 @@
 
   .hero-cta {
     display: flex;
-
+    margin: 1.5rem 0 0 0;
+    
     @include respond(tab-port) {
       justify-content: center;
     }
@@ -60,6 +74,62 @@
       @include respond(phone) {
         font-size: 2rem;
       }
+    }
+  }
+  .waves-container {
+    position: absolute;
+    top: 30%;
+    height: 50%;
+    width: 100%;
+    opacity: 25%;
+    z-index: 2;
+  }
+  .waves {
+    position: relative;
+    width: 100%;
+    height:90%;
+    margin-bottom:-7px; /*Fix for safari gap*/
+    min-height:100px;
+  }
+  #gentle-wave { stroke-width: .15px;}
+  .parallax > use {
+    animation: move-forever 25s cubic-bezier(.55,.5,.45,.5) infinite;
+  }
+  .parallax > use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
+  }
+  .parallax > use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
+  }
+  .parallax > use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
+  }
+  .parallax > use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
+  }
+  @keyframes move-forever {
+    0% {
+     transform: translate3d(-90px,0,0);
+    }
+    100% { 
+      transform: translate3d(85px,0,0);
+    }
+  }
+  /*Shrinking for mobile*/
+  @media (max-width: 768px) {
+    .waves {
+      height:40px;
+      min-height:40px;
+    }
+    .content {
+      height:30vh;
+    }
+    h1 {
+      font-size:24px;
     }
   }
 }
