Designed home page layout v1

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,14 +1,12 @@
 // COLORS
 $primary-color: #F7F4F3;
-$secondary-color: #6B7F82;
-
-// $primary-color: #7f449d;
-// $secondary-color: #793fc1;
+$secondary-color: #A5C4D4;
 
 $white-color: #fff;
 $black-color: #191E27;
-$dark-grey: #333333;
-$off-pink: #D3B5D2;
+$purple-color: #7B6D8D;
+$blue-color: #8499B1;
+$red-color: #FF5D73;
 $dark-blue-text: #272341; // For Headings
 
 // FONT SIZE
