--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -1,12 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=PT+Serif&display=swap');
 
 h1 {
-  font-weight: 700;
+  //font-weight: 700;
+  font-family: 'PT Serif', serif;
 }
 
 p,
 a {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'PT Sans', sans-serif;
   font-size: $default-font-size;
 }
 
