--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,6 +13,7 @@
 @import './sections/about';
 @import './sections/contact';
 @import './sections/hero';
-@import './sections/projects';
+@import './sections/project_tiles';
+
 
 @import './vendor/css/font-awesome.min.css';
