--- a/src/style/sections/_contact.scss
+++ b/src/style/sections/_contact.scss
@@ -1,12 +1,11 @@
 #contact {
-  //background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
-  // -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
-  // clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
+  text-align: left;
   background-color: $black-color;
-  padding: 15rem 0 10rem 0;
+  padding: 12rem 0 6rem 0;
   margin-top: -15rem;
   margin-bottom: -1px;
   color: $white-color;
+  position: relative;
 
   @include respond(tab-land) {
     padding: 10rem 0;
@@ -16,22 +15,83 @@
   }
 
   .contact-wrapper {
-    margin-top: 3.2rem;
     padding: 0 2rem;
     backface-visibility: hidden;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-    &__text {
-      margin-bottom: 2.5rem;
+    h1 {
+      font-size: 4rem;
+      margin: 0;
     }
 
     &__text,
     a {
-      font-size: 2.4rem;
+      font-size: 2rem;
+      margin: 0;
 
       // Responsive for contact text
       @include respond(phone) {
-        font-size: 2rem;
+        font-size: 1.5rem;
       }
+    }
+  }
+
+  .waves-container {
+    position: absolute;
+    top: 30%;
+    height: 50%;
+    width: 100%;
+    opacity: 25%;
+    z-index: 2;
+  }
+  .waves {
+    position: relative;
+    width: 100%;
+    height:90%;
+    margin-bottom:-7px; /*Fix for safari gap*/
+    min-height:100px;
+  }
+  #gentle-wave { stroke-width: .15px;}
+  .parallax > use {
+    animation: move-forever 25s cubic-bezier(.55,.5,.45,.5) infinite;
+  }
+  .parallax > use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
+  }
+  .parallax > use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
+  }
+  .parallax > use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
+  }
+  .parallax > use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
+  }
+  @keyframes move-forever {
+    0% {
+     transform: translate3d(-90px,0,0);
+    }
+    100% { 
+      transform: translate3d(85px,0,0);
+    }
+  }
+  /*Shrinking for mobile*/
+  @media (max-width: 768px) {
+    .waves {
+      height:40px;
+      min-height:40px;
+    }
+    .content {
+      height:30vh;
+    }
+    h1 {
+      font-size:24px;
     }
   }
 }
