finish contentful integration

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,15 +1,16 @@
 // COLORS
-$primary-color: #F7F4F3;
-$secondary-color: #A5C4D4;
+$primary-color: #A5C4D4;
+$secondary-color: #FF5D73;
 
 $white-color: #fff;
 $black-color: #191E27;
 $purple-color: #7B6D8D;
 $blue-color: #8499B1;
-$red-color: #FF5D73;
+$beige-color: #F7F4F3;
 $dark-blue-text: #272341; // For Headings
 
 // FONT SIZE
 $default-font-size: 1.6rem;
+$button-font-size: .5rem;
 $big-font-size: 4rem;
 $mid-font-size: 2.5rem;
