--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -106,7 +106,7 @@
           z-index: 2;
           width: 200px;
           height: 4px;
-          background-color: $red-color;
+          background-color: $secondary-color;
         }
         
       }
@@ -129,7 +129,7 @@
           z-index: 2;
           width: 200px;
           height: 4px;
-          background-color: $red-color;
+          background-color: $secondary-color;
         }
       }
     }
