--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -38,7 +38,7 @@
   }
 
   .hero-title {
-    font-size: 4rem;
+    font-size: 4.5rem;
     font-weight: 700;
     margin-bottom: 1rem;
     text-align: left;
@@ -69,7 +69,7 @@
     }
 
     & a {
-      font-size: 2.4rem;
+      font-size: 2rem;
 
       @include respond(phone) {
         font-size: 2rem;
@@ -82,7 +82,7 @@
     height: 50%;
     width: 100%;
     opacity: 25%;
-    z-index: 2;
+    //z-index: 2;
   }
   .waves {
     position: relative;
