--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=PT+Serif&display=swap');
 
-h1 {
+h1,h2,h3 {
   //font-weight: 700;
   font-family: 'PT Serif', serif;
 }
