--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -67,6 +67,7 @@
   margin: 1rem 0 $default-font-size;
   transition: all 0.2s ease-in;
   cursor: pointer;
+  font-size: 8em;
 
   &:hover {
     transform: translateY(-2px);
