--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,6 +14,7 @@
 @import './sections/contact';
 @import './sections/hero';
 @import './sections/project_tiles';
+@import './sections/project.scss';
 
 
 @import './vendor/css/font-awesome.min.css';
