--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -1,16 +1,8 @@
 #about {
   background-color: $black-color;
-  // background-image: linear-gradient(
-  //   135deg,
-  //   $primary-color 0%,
-  //   $secondary-color 100%
-  // );
   color: $white-color;
   height: 100%;
-  border-top: 0px;
-  // -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  // clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  padding-bottom: 10%;
+  padding: 10rem 0 10rem 0;
 
   @include respond(tab-land) {
     height: 100%;
@@ -106,7 +98,7 @@
           z-index: 2;
           width: 200px;
           height: 4px;
-          background-color: $secondary-color;
+          background-color: $primary-color;
         }
         
       }
@@ -129,7 +121,7 @@
           z-index: 2;
           width: 200px;
           height: 4px;
-          background-color: $secondary-color;
+          background-color: $primary-color;
         }
       }
     }
