--- a/src/style/sections/_project_tiles.scss
+++ b/src/style/sections/_project_tiles.scss
@@ -1,7 +1,7 @@
 #projects {
   padding: 0;
   background-color: $white-color;
-  color: $primary-color;
+  color: $white-color;
 
   .project-wrapper {
     display: flex;
@@ -48,8 +48,8 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        background-color: black;
-        opacity: 70%;
+        //background-color: black;
+        opacity: 80%;
         z-index: 0;
         transition: all 0.5s ease-out;
 
@@ -57,11 +57,6 @@
           opacity: 20%;
           background-color: black;
         }
-
-        &:nth-of-type(2n) {background-color: $purple-color;}
-        &:nth-of-type(3n) {background-color: $blue-color;}
-        &:nth-of-type(4n) {background-color: $beige-color;}
-        &:nth-of-type(5n) {background-color: $secondary-color;}
       }
 
       &:nth-child(2),
