--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -1,6 +1,7 @@
 #hero {
   min-height: 100vh;
   height: 100vh;
+  width: 100vw;
   display: flex;
   align-items: center;
   border-bottom: 0px;
@@ -31,6 +32,14 @@
     align-items: center;
     margin: 0;
     padding: 0 0 0 12rem;
+
+    // #Fill-2,
+    // #Fill-3,
+    // #Fill-4,
+    // #Fill-5,
+    // #Fill-6 {
+    //   opacity: 0;
+    // }
   }
 
   @include respond(phone) {
@@ -38,11 +47,11 @@
   }
 
   .hero-title {
-    font-size: 4.5rem;
+    font-size: 5rem;
     font-weight: 700;
     margin-bottom: 1rem;
     text-align: left;
-    max-width: 600px;
+    max-width: 800px;
 
     @include respond(tab-land) {
       font-size: 4rem;
@@ -59,6 +68,8 @@
       font-size: 2.8rem;
     }
   }
+
+  p { text-align: left; }
 
   .hero-cta {
     display: flex;
