--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -9,6 +9,9 @@
     -webkit-clip-path: none;
     clip-path: none;
   }
+  @include respond(phone) {
+    padding: 5rem 0 0 0;
+  }
 
   .about-wrapper {
     @include respond(phone) {
@@ -48,7 +51,8 @@
         }
         @include respond(phone) {
           font-size: 1.6rem;
-          text-align: center;
+          text-align: left;
+          padding: 0 4rem 0 4rem;
         }
 
         &--important {
@@ -72,6 +76,10 @@
     .about-text {
       position: relative;
       overflow: hidden;
+
+      @include respond(phone) {
+        padding: 0 0 4rem 0;
+      }
 
       h1 {
         font-size: 6em;
