--- a/src/style/sections/_project_tiles.scss
+++ b/src/style/sections/_project_tiles.scss
@@ -24,6 +24,10 @@
       padding: 4em;
       //flex-grow: 1;
 
+      @include respond(phone) {
+        min-width: 100vw;
+      }
+
       .project-wrapper__text {
         z-index: 2;
         align-self: flex-start;
@@ -49,12 +53,12 @@
         width: 100%;
         height: 100%;
         //background-color: black;
-        opacity: 80%;
+        opacity: 0.85;
         z-index: 0;
         transition: all 0.5s ease-out;
 
         &:hover {
-          opacity: 20%;
+          opacity: 0.20;
           background-color: black;
         }
       }
