--- a/src/style/sections/_project.scss
+++ b/src/style/sections/_project.scss
@@ -28,6 +28,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            white-space: nowrap;
 
             &__title {
                 font-size: 12em;
