--- a/src/style/sections/_project.scss
+++ b/src/style/sections/_project.scss
@@ -15,12 +15,20 @@
             color: $primary-color;
             //background-color: $white-color;
         }
+
+        @include respond(phone) {
+            text-align: left;
+            position: fixed;
+            color: $secondary-color;
+            background-color: white;
+            padding: 1rem 2rem 1rem 2rem;
+        }
     }
 
     &__intro {
         height: 100vh;
         width: 100vw;
-        padding: 10rem 0 10rem 0;
+        padding: 2rem 0 2rem 0;
         
         &__text {
             width: 100%;
@@ -32,6 +40,10 @@
 
             &__title {
                 font-size: 12em;
+
+                @include respond(phone) {
+                    font-size: 6em;
+                }
             }
 
             #left {
@@ -55,6 +67,9 @@
             left: 50%;
             transform: translate(-50%, -50%);
             
+            @include respond(phone) {
+                width: 100%;
+            }
 
             &__cover {
                 position: absolute;
@@ -92,6 +107,10 @@
         padding: 2rem 20rem 2rem 20rem;
         color: $black-color;
 
+        @include respond(phone) {
+            padding: 2rem 4rem 2rem 4rem;
+        }
+
         a {
             color: $red-color;
             font-size: $default-font-size;
@@ -100,6 +119,10 @@
         h1 {
             font-size: 3em;
             margin: 5rem 0 1rem 0;
+
+            @include respond(phone) {
+                font-size: 1.5em;
+            }
         }
         h3 {
             font-size: 1.2em;
