--- a/src/style/sections/_project.scss
+++ b/src/style/sections/_project.scss
@@ -84,22 +84,6 @@
                 object-fit: cover;
             }
         }
-
-        .down-to-project i {
-            display: flex;
-            justify-content: center;
-            color: $white-color;
-            margin: 1rem 0 $default-font-size;
-            transition: all 0.2s ease-in;
-            cursor: pointer;
-            font-size: 8em;
-          
-            &:hover {
-              transform: translateY(-2px);
-            }
-        }
-
-        
     }
 
     &__body {
@@ -128,5 +112,14 @@
             font-size: 1.2em;
             margin: 2rem 0 1rem 0;
         }
+
+        p {
+
+            .project__video {
+                display: block;
+                margin: 0 auto;
+            }
+        }
+        
     }
 }
