--- a/src/style/sections/_project.scss
+++ b/src/style/sections/_project.scss
@@ -120,6 +120,12 @@
                 margin: 0 auto;
             }
         }
+
+        .content-img {
+            display: block;
+            margin: 2em auto;
+            max-height: 30em;
+        }
         
     }
 }
