--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,17 +1,18 @@
 // COLORS
-$primary-color: #A5C4D4;
-$secondary-color: #464655; 
+$primary-color: #a5c4d4;
+$secondary-color: #D5573B;
 
 $white-color: #fff;
-$black-color: #191E27;
-$purple-color: #7B6D8D;
-$blue-color: #8499B1;
-$beige-color: #F7F4F3;
-$red-color: #FF5D73;
+$black-color: #191e27;
+$purple-color: #7b6d8d;
+$blue-color: #8499b1;
+$beige-color: #f7f4f3;
+$red-color: #ff5d73;
 $dark-blue-text: #272341; // For Headings
 
 // FONT SIZE
 $default-font-size: 1.7rem;
-$button-font-size: .5rem;
+$button-font-size: 1rem;
+$big-button-size: 3rem;
 $big-font-size: 4rem;
 $mid-font-size: 2.5rem;
