--- a/src/style/sections/_contact.scss
+++ b/src/style/sections/_contact.scss
@@ -61,13 +61,15 @@
   .waves {
     position: relative;
     width: 100%;
-    height:90%;
-    margin-bottom:-7px; /*Fix for safari gap*/
-    min-height:100px;
+    height: 90%;
+    margin-bottom: -7px; /*Fix for safari gap*/
+    min-height: 100px;
   }
-  #gentle-wave { stroke-width: .15px;}
+  #gentle-wave {
+    stroke-width: 0.15px;
+  }
   .parallax > use {
-    animation: move-forever 25s cubic-bezier(.55,.5,.45,.5) infinite;
+    animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
   }
   .parallax > use:nth-child(1) {
     animation-delay: -2s;
@@ -87,23 +89,23 @@
   }
   @keyframes move-forever {
     0% {
-     transform: translate3d(-90px,0,0);
+      transform: translate3d(-90px, 0, 0);
     }
-    100% { 
-      transform: translate3d(85px,0,0);
+    100% {
+      transform: translate3d(85px, 0, 0);
     }
   }
   /*Shrinking for mobile*/
   @media (max-width: 768px) {
     .waves {
-      height:80px;
-      min-height:40px;
+      height: 80px;
+      min-height: 40px;
     }
     .content {
-      height:30vh;
+      height: 30vh;
     }
     h1 {
-      font-size:24px;
+      font-size: 24px;
     }
   }
 }
